# shogi_data

./: CITATIONS.bib  README.md  checksums.tsv  make_dataset.py  pyproject.toml  shogi_data_dataset_builder.py  shogi_data_dataset_builder_test.py
