[tool.poetry]
name = "shogi-data"
version = "0.1.0"
description = ""
authors = ["Imoto Yasuhiro <soyiharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
tensorflow-datasets = "^4.9.4"
tensorflow = "2.15.0"
cshogi = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
