[tool.poetry]
name = "shogi-data"
version = "0.1.0"
description = ""
authors = ["Imoto Yasuhiro <soyiharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
tensorflow-datasets = "^4.9.4"
cshogi = "^0.8.4"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
